# vic

./: Cargo.toml  README.md  kilo.c  main.rs
.github/workflows/: build.yml
src/: main.rs  state.rs
src/state/: buffer.rs  error.rs  mod.rs  mode.rs
src/state/buffer/: mod.rs  motions.rs
tests/: buffer.rs  motions.rs  state.rs
