[package]
name = "vic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto_enums = "0.8.6"
crossterm = "0.27.0"
itertools = "0.13.0"
ratatui = "0.26.3"
unicode-segmentation = "1.12.0"

[[bin]]
name = "vic"
path = "src/main.rs"

[lib]
name = "state"
path = "src/state/mod.rs"
